rust/crates/atomcad-crystolecule/tests/crystolecule/snapshots/crystolecule__chemisorption_sequential_golden_test__sequential_plan_ethylene.snap
---
source: crates/atomcad-crystolecule/tests/crystolecule/chemisorption_sequential_golden_test.rs
expression: plan_snapshot(&p)
---
PlanStats {
    feet: 2,
    sites: 155,
    paths: 65,
    anchors: 8,
    sphere_pairs: 37,
    torus_triples: 0,
    duplicates: 12,
    pruned_valence: 8,
    pruned_no_acceptor: 0,
    pruned_filter: 0,
    pruned_mirror: 0,
    mirror_undecided: 0,
    candidates: 37,
    parents: 0,
    seating_clashes: 0,
    pruned_clash: 0,
    to_relax: 37,
    near_misses: 21,
    truncated: false,
    local_phase: false,
    seconds: 0.0,
}
first 10 to relax:
  1–209 4–124
  1–209 4–210
  1–209 4–215
  1–209 4–298
  1–209 4–362
  1–209 4–363
  1–210 4–197
  1–210 4–203
  1–210 4–209
  1–210 4–215
